# DepersSystem

./: .gitignore  AGENTS.md  Dockerfile  README.md  dev.sh  docker-compose.yml  pyproject.toml  setup.sh
app/: main.py
app/api/: routes.py
app/core/: config.py  logger.py  patterns.py
app/services/: __init__.py  fake_generator.py  file_pipeline.py  image_pipeline.py  mapping_store.py  model_manager.py  name_gazetteer.py  tabular_pipeline.py  text_pipeline.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: EntityList.css  EntityList.tsx  FileDropzone.css  FileDropzone.tsx  Layout.css  Layout.tsx  ModelSelector.css  ModelSelector.tsx  index.ts
frontend/src/pages/: FilePage.css  FilePage.tsx  HistoryPage.css  HistoryPage.tsx  TextPage.css  TextPage.tsx  index.ts
scripts/: all_settlements_filtered.json  fetch_names.py  fetch_russian_settlements.py  filter_settlements.py  generate_data_files.py  multi_word_settlements.json  russian_settlements.json  single_word_settlements.json  update_names.py
